Update number components to NullAware. New classes: Field, NumberField. Remove separate factories. Tease apart MaskFormatter. Cleanup SSFormattedTextField.